test/negative/217_break_in_arm_outside_loop.err
217_break_in_arm_outside_loop.fx:5:39: error: cannot use 'break' outside of loop

1 errors occured during type checking.
